--- a/po/ja.po
+++ b/po/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-09 22:10-0400\n"
-"PO-Revision-Date: 2014-03-21 11:06+0000\n"
+"PO-Revision-Date: 2014-03-22 09:43+0000\n"
 "Last-Translator: ub <xenolith0bytetestcomgreen@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-03-22 07:00+0000\n"
+"X-Launchpad-Export-Date: 2014-03-23 06:41+0000\n"
 "X-Generator: Launchpad (build 16967)\n"
 "Language: ja\n"
 
@@ -183,7 +183,7 @@ msgstr "作業ディレクトリー"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Browse…"
-msgstr ""
+msgstr "開く..."
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "<b>Application Details</b>"
@@ -240,11 +240,11 @@ msgstr "<b>オプション</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:65
 msgid "Add"
-msgstr ""
+msgstr "追加"
 
 #: ../data/ui/MenulibreWindow.ui.h:66
 msgid "Remove"
-msgstr ""
+msgstr "削除"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
 msgid "Clear"
