--- a/po/ja.po
+++ b/po/ja.po
@@ -8,19 +8,19 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-09 22:10-0400\n"
-"PO-Revision-Date: 2014-03-22 09:43+0000\n"
-"Last-Translator: ub <xenolith0bytetestcomgreen@gmail.com>\n"
+"PO-Revision-Date: 2014-03-30 03:36+0000\n"
+"Last-Translator: Ikuya Awashiro <ikuya@fruitsbasket.info>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-03-23 06:41+0000\n"
+"X-Launchpad-Export-Date: 2014-03-30 06:13+0000\n"
 "X-Generator: Launchpad (build 16967)\n"
 "Language: ja\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "メニュー・エディター"
+msgstr "メニューエディター"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Add or remove applications from the menu"
@@ -32,11 +32,11 @@ msgstr "ランチャー追加(_L)"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Add _Directory"
-msgstr "ディレクトリー追加(_D)"
+msgstr "ディレクトリ追加(_D)"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Add _Separator"
-msgstr "セパレータ追加(_S)"
+msgstr "セパレーター追加(_S)"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Icon Selection"
@@ -126,7 +126,7 @@ msgstr "削除"
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "Search terms…"
-msgstr ""
+msgstr "単語の検索..."
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Move Up"
@@ -179,7 +179,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Working Directory"
-msgstr "作業ディレクトリー"
+msgstr "作業ディレクトリ"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Browse…"
@@ -187,7 +187,7 @@ msgstr "開く..."
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "<b>Application Details</b>"
-msgstr ""
+msgstr "<b>アプリケーションの詳細</b>"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:47
@@ -248,11 +248,11 @@ msgstr "削除"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
 msgid "Clear"
-msgstr ""
+msgstr "消去"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Categories"
-msgstr "カテゴリー"
+msgstr "分類"
 
 #: ../data/ui/MenulibreWindow.ui.h:69
 msgid "Show"
@@ -264,11 +264,11 @@ msgstr "名前"
 
 #: ../data/ui/MenulibreWindow.ui.h:71
 msgid "Action Name"
-msgstr ""
+msgstr "アクション名"
 
 #: ../data/ui/MenulibreWindow.ui.h:72
 msgid "Actions"
-msgstr ""
+msgstr "アクション"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:74
@@ -279,7 +279,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:75
 msgid "Generic Name"
-msgstr ""
+msgstr "一般名"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:77
@@ -295,7 +295,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:82
 msgid "Not Shown In"
-msgstr ""
+msgstr "限定非表示"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:84
@@ -310,7 +310,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:89
 msgid "Only Shown In"
-msgstr ""
+msgstr "限定表示"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:91
@@ -336,7 +336,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:98
 msgid "Mimetypes"
-msgstr ""
+msgstr "MIME タイプ"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:100
@@ -351,7 +351,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:104
 msgid "Keywords"
-msgstr ""
+msgstr "キーワード"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:106
@@ -380,7 +380,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:116
 msgid "Hidden"
-msgstr ""
+msgstr "非表示"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:118
@@ -404,36 +404,36 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:126
 msgid "Advanced"
-msgstr ""
+msgstr "詳細"
 
 #: ../data/ui/MenulibreWindow.ui.h:127
 msgid "<small><i>Filename</i></small>"
-msgstr ""
+msgstr "<small><i>ファイル名</i></small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:128
 msgid "Select an icon…"
-msgstr ""
+msgstr "アイコンの選択..."
 
 #: ../data/ui/MenulibreWindow.ui.h:129
 msgid "<b>Select an icon</b>"
-msgstr ""
+msgstr "<b>アイコンの選択</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:130
 msgid "Search"
-msgstr ""
+msgstr "検索"
 
 #: ../data/ui/MenulibreWindow.ui.h:131
 msgid "column"
-msgstr ""
+msgstr "項目"
 
 #: ../menulibre/__init__.py:33
 msgid "Show debug messages"
-msgstr ""
+msgstr "デバッグメッセージの表示"
 
 #: ../menulibre/MenuEditor.py:92 ../menulibre/MenulibreApplication.py:1361
 #: ../menulibre/MenulibreApplication.py:2141
 msgid "Separator"
-msgstr ""
+msgstr "セパレーター"
 
 #. Standard Items
 #: ../menulibre/MenulibreApplication.py:59
@@ -483,60 +483,60 @@ msgstr "WINE"
 #. Desktop Environment
 #: ../menulibre/MenulibreApplication.py:71
 msgid "Desktop configuration"
-msgstr ""
+msgstr "デスクトップの設定"
 
 #: ../menulibre/MenulibreApplication.py:72
 msgid "User configuration"
-msgstr ""
+msgstr "ユーザーの設定"
 
 #: ../menulibre/MenulibreApplication.py:73
 msgid "Hardware configuration"
-msgstr ""
+msgstr "ハードウェアの設定"
 
 #. GNOME Specific
 #: ../menulibre/MenulibreApplication.py:75
 msgid "GNOME application"
-msgstr ""
+msgstr "GNOMEアプリケーション"
 
 #: ../menulibre/MenulibreApplication.py:76
 msgid "GTK+ application"
-msgstr ""
+msgstr "GTK+アプリケーション"
 
 #: ../menulibre/MenulibreApplication.py:77
 msgid "GNOME user configuration"
-msgstr ""
+msgstr "GNOMEユーザー設定"
 
 #: ../menulibre/MenulibreApplication.py:78
 msgid "GNOME hardware configuration"
-msgstr ""
+msgstr "GNOMEハードウェア設定"
 
 #: ../menulibre/MenulibreApplication.py:79
 #: ../menulibre/MenulibreApplication.py:80
 msgid "GNOME system configuration"
-msgstr ""
+msgstr "GNOMEシステム設定"
 
 #. Xfce Specific
 #: ../menulibre/MenulibreApplication.py:82
 #: ../menulibre/MenulibreApplication.py:83
 msgid "Xfce menu item"
-msgstr ""
+msgstr "Xfceメニュー項目"
 
 #: ../menulibre/MenulibreApplication.py:84
 msgid "Xfce toplevel menu item"
-msgstr ""
+msgstr "Xfceトップレベルメニュー項目"
 
 #: ../menulibre/MenulibreApplication.py:85
 msgid "Xfce user configuration"
-msgstr ""
+msgstr "Xfceユーザー設定"
 
 #: ../menulibre/MenulibreApplication.py:86
 msgid "Xfce hardware configuration"
-msgstr ""
+msgstr "Xfceハードウェア設定"
 
 #: ../menulibre/MenulibreApplication.py:87
 #: ../menulibre/MenulibreApplication.py:88
 msgid "Xfce system configuration"
-msgstr ""
+msgstr "Xfceシステム設定"
 
 #: ../menulibre/MenulibreApplication.py:136
 #: ../menulibre/MenulibreApplication.py:175
@@ -545,31 +545,31 @@ msgstr "その他"
 
 #: ../menulibre/MenulibreApplication.py:379
 msgid "Add _Launcher..."
-msgstr ""
+msgstr "ランチャーを追加(_L)..."
 
 #: ../menulibre/MenulibreApplication.py:380
 msgid "Add Launcher..."
-msgstr ""
+msgstr "ランチャーを追加..."
 
 #: ../menulibre/MenulibreApplication.py:386
 msgid "Add _Directory..."
-msgstr ""
+msgstr "辞書を追加(_D)..."
 
 #: ../menulibre/MenulibreApplication.py:387
 msgid "Add Directory..."
-msgstr ""
+msgstr "辞書を追加..."
 
 #: ../menulibre/MenulibreApplication.py:393
 msgid "_Add Separator..."
-msgstr ""
+msgstr "セパレーターを追加(_A)..."
 
 #: ../menulibre/MenulibreApplication.py:394
 msgid "Add Separator..."
-msgstr ""
+msgstr "セパレーターを追加..."
 
 #: ../menulibre/MenulibreApplication.py:400
 msgid "_Save"
-msgstr ""
+msgstr "保存(_S)"
 
 #: ../menulibre/MenulibreApplication.py:401
 #: ../menulibre/MenulibreApplication.py:1020
@@ -579,28 +579,28 @@ msgstr "保存"
 
 #: ../menulibre/MenulibreApplication.py:407
 msgid "_Undo"
-msgstr ""
+msgstr "元に戻す(_U)"
 
 #: ../menulibre/MenulibreApplication.py:414
 msgid "_Redo"
-msgstr ""
+msgstr "やり直す(_R)"
 
 #: ../menulibre/MenulibreApplication.py:421
 msgid "_Revert"
-msgstr ""
+msgstr "変更を破棄する(_R)"
 
 #: ../menulibre/MenulibreApplication.py:428
 msgid "_Delete"
-msgstr ""
+msgstr "削除(_D)"
 
 #: ../menulibre/MenulibreApplication.py:435
 msgid "_Quit"
-msgstr ""
+msgstr "終了(_Q)"
 
 #: ../menulibre/MenulibreApplication.py:436
 #: ../menulibre/MenulibreApplication.py:2527
 msgid "Quit"
-msgstr ""
+msgstr "終了"
 
 #: ../menulibre/MenulibreApplication.py:442
 msgid "_Contents"
@@ -609,16 +609,16 @@ msgstr "目次(_C)"
 #: ../menulibre/MenulibreApplication.py:443
 #: ../menulibre/MenulibreApplication.py:2525
 msgid "Help"
-msgstr ""
+msgstr "ヘルプ"
 
 #: ../menulibre/MenulibreApplication.py:449
 msgid "_About"
-msgstr ""
+msgstr "このアプリケーションについて(_A)"
 
 #: ../menulibre/MenulibreApplication.py:450
 #: ../menulibre/MenulibreApplication.py:2526
 msgid "About"
-msgstr ""
+msgstr "MenuLibreについて"
 
 #. Create a new column.
 #: ../menulibre/MenulibreApplication.py:568
@@ -627,19 +627,19 @@ msgstr "検索結果"
 
 #: ../menulibre/MenulibreApplication.py:799
 msgid "ThisEntry"
-msgstr ""
+msgstr "このエントリ"
 
 #: ../menulibre/MenulibreApplication.py:817
 msgid "Select a category"
-msgstr ""
+msgstr "分類の選択"
 
 #: ../menulibre/MenulibreApplication.py:820
 msgid "Category Name"
-msgstr ""
+msgstr "分類名"
 
 #: ../menulibre/MenulibreApplication.py:904
 msgid "This Entry"
-msgstr ""
+msgstr "このエントリ"
 
 #: ../menulibre/MenulibreApplication.py:959
 msgid "New Shortcut"
@@ -648,132 +648,134 @@ msgstr "新しいショートカット"
 #. Unsaved changes
 #: ../menulibre/MenulibreApplication.py:1009
 msgid "Do you want to save the changes before closing?"
-msgstr ""
+msgstr "終了する前に変更を保存しますか？"
 
 #: ../menulibre/MenulibreApplication.py:1010
 msgid "If you don't save the launcher, all the changes will be lost.'"
-msgstr ""
+msgstr "ランチャーを保存しないと、すべての変更を失います。"
 
 #: ../menulibre/MenulibreApplication.py:1017
 #: ../menulibre/MenulibreApplication.py:1444
 msgid "Save Changes"
-msgstr ""
+msgstr "変更の保存"
 
 #: ../menulibre/MenulibreApplication.py:1018
 #: ../menulibre/MenulibreApplication.py:1445
 msgid "Don't Save"
-msgstr ""
+msgstr "保存しない"
 
 #: ../menulibre/MenulibreApplication.py:1140
 msgid "Select an image"
-msgstr ""
+msgstr "画像の選択"
 
 #: ../menulibre/MenulibreApplication.py:1144
 #: ../menulibre/MenulibreApplication.py:1263
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: ../menulibre/MenulibreApplication.py:1146
 msgid "Images"
-msgstr ""
+msgstr "画像"
 
 #: ../menulibre/MenulibreApplication.py:1255
 msgid "Select a working directory..."
-msgstr ""
+msgstr "作業ディレクトリの選択..."
 
 #: ../menulibre/MenulibreApplication.py:1259
 msgid "Select an executable..."
-msgstr ""
+msgstr "実行ファイルの選択.."
 
 #. Display a dialog saying this item is missing
 #: ../menulibre/MenulibreApplication.py:1408
 msgid "No Longer Installed"
-msgstr ""
+msgstr "インストールされていません"
 
 #: ../menulibre/MenulibreApplication.py:1409
 msgid ""
 "This launcher has been removed from the system.\n"
 "Selecting the next available item."
 msgstr ""
+"このランチャーはシステムから削除されました。\n"
+"次にあるアイテムを選択してください。"
 
 #: ../menulibre/MenulibreApplication.py:1435
 msgid "Do you want to save the changes before leaving this launcher?"
-msgstr ""
+msgstr "ランチャーを終了する前に保存しますか？"
 
 #: ../menulibre/MenulibreApplication.py:1437
 msgid "If you don't save the launcher, all the changes will be lost."
-msgstr ""
+msgstr "ランチャーを保存しないと、すべての変更を失います。"
 
 #: ../menulibre/MenulibreApplication.py:1667
 msgid "You do not have permission to delete this file."
-msgstr ""
+msgstr "このファイルを削除する権限がありません。"
 
 #: ../menulibre/MenulibreApplication.py:2034
 msgid "Cannot add subdirectories to preinstalled system paths."
-msgstr ""
+msgstr "インストールされているシステムのパスにサブディレクトリを追加できません。"
 
 #: ../menulibre/MenulibreApplication.py:2059
 msgid "New Launcher"
-msgstr ""
+msgstr "新しいランチャー"
 
 #: ../menulibre/MenulibreApplication.py:2109
 msgid "New Directory"
-msgstr ""
+msgstr "新しいディレクトリ"
 
 #: ../menulibre/MenulibreApplication.py:2441
 msgid "Are you sure you want to restore this launcher?"
-msgstr ""
+msgstr "ランチャーを復元しますか？"
 
 #: ../menulibre/MenulibreApplication.py:2447
 #: ../menulibre/MenulibreApplication.py:2448
 msgid "Restore Launcher"
-msgstr ""
+msgstr "ランチャーの復元"
 
 #: ../menulibre/MenulibreApplication.py:2449
 msgid ""
 "All changes since the last saved state will be lost and cannot be restored "
 "automatically."
-msgstr ""
+msgstr "最後に保存されたすべての変更はなくなり、自動的には復元されませんん。"
 
 #: ../menulibre/MenulibreApplication.py:2464
 msgid "Are you sure you want to delete this separator?"
-msgstr ""
+msgstr "このセパレーターを本当に削除しますか？"
 
 #: ../menulibre/MenulibreApplication.py:2467
 #, python-format
 msgid "Are you sure you want to delete \"%s\"?"
-msgstr ""
+msgstr "\"%s\" を本当に削除してもよろしいですか？"
 
 #: ../menulibre/MenulibreApplication.py:2469
 msgid "This cannot be undone."
-msgstr ""
+msgstr "これは元に戻せません"
 
 #: ../menulibre/MenulibreApplication.py:2547
 msgid "Do you want to read the MenuLibre manual online?"
-msgstr ""
+msgstr "MenuLibreのマニュアルをオンラインで読みますか？"
 
 #: ../menulibre/MenulibreApplication.py:2553
 msgid "Read Online"
-msgstr ""
+msgstr "オンラインで読む"
 
 #: ../menulibre/MenulibreApplication.py:2554
 msgid "Online Documentation"
-msgstr ""
+msgstr "オンラインドキュメント"
 
 #: ../menulibre/MenulibreApplication.py:2555
 msgid ""
 "You will be redirected to the documentation website where the help pages are "
 "maintained."
-msgstr ""
+msgstr "ドキュメントのWebサイトにある、メンテナンスされているヘルプのページにリダイレクトされるでしょう。"
 
 #. Populate the AboutDialog with all the relevant details.
 #: ../menulibre/MenulibreApplication.py:2574
 msgid "About MenuLibre"
-msgstr ""
+msgstr "MenuLibreについて"
 
 #: ../menulibre/MenulibreApplication.py:2577
 msgid "Copyright © 2012-2014 Sean Davis"
-msgstr ""
+msgstr "Copyright © 2012-2014 Sean Davis"
 
 #: ../menulibre/MenulibreXdg.py:49
 msgid "New Menu Item"
