--- a/po/ja.po
+++ b/po/ja.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-09 22:10-0400\n"
-"PO-Revision-Date: 2014-03-30 03:36+0000\n"
-"Last-Translator: Ikuya Awashiro <ikuya@fruitsbasket.info>\n"
+"PO-Revision-Date: 2014-04-10 08:00+0000\n"
+"Last-Translator: ub <xenolith0bytetestcomgreen@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-03-31 06:37+0000\n"
-"X-Generator: Launchpad (build 16967)\n"
+"X-Launchpad-Export-Date: 2014-04-11 05:56+0000\n"
+"X-Generator: Launchpad (build 16976)\n"
 "Language: ja\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -24,7 +24,7 @@ msgstr "メニューエディター"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Add or remove applications from the menu"
-msgstr "メニューにあるアプリの追加と削除"
+msgstr "メニューにあるアプリケーションの追加と削除"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Add _Launcher"
